# jaxframe

./: .gitignore  MASKED_ARRAY_SUMMARY.md  README.md  debug_static.py  debug_tracer_detection.py  demo_improved_printing.py  demo_new_syntax.py  explore_tracer_attrs.py  explore_tracers.py  pyproject.toml  run_tests.sh  simple_tracer_test.py  test_catch_all.py  test_clean_formatting.py  test_complex_tracers.py  test_exact_problematic_tracer.py  test_extended_transforms.py  test_improved_printing.py  test_jax_error_fix.py  test_lookup_table.py  test_really_complex_tracers.py  test_semi_join_equivalence.py  test_tracer_demo.py  test_tracer_formatting.py  test_tracer_safe_printing.py
examples/: clean_formatting_demo.py  masked_array_demo.py  semi_join_exists_demo.ipynb  simple.ipynb  simple_jitprint_demo.py  test_jitprint.py
src/jaxframe/: __init__.py  dataframe.py  jitprint.py  masked_array.py  transform.py
tests/: test_dataframe.py  test_jax_arrays.py  test_jitprint.py  test_join_functionality.py  test_lookup_table.py  test_masked_array.py  test_mixed_types.py  test_name_handling.py  test_printing_improvements.py  test_transform.py
